--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,16 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+pnpm-error.log*
 lerna-debug.log*
 
 node_modules
+.DS_Store
 dist
 dist-ssr
+dist.zip
 *.local
+stats.html
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +26,7 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+types/components.d.ts
+package-lock.json
+yarn.lock
