--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "vue3-admin",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
@@ -12,23 +11,57 @@
     "preinstall": "npx only-allow pnpm"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "@vueuse/core": "^10.7.2",
+    "axios": "^1.6.5",
     "dayjs": "^1.11.10",
-    "vue": "^3.4.15"
+    "echarts": "^5.4.3",
+    "element-plus": "^2.5.2",
+    "mockjs": "^1.1.0",
+    "nprogress": "^0.2.0",
+    "path-to-regexp": "^6.2.1",
+    "pinia": "^2.1.7",
+    "vue": "^3.4.15",
+    "vue-i18n": "^9.9.0",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@element-plus/icons-vue": "^2.3.1",
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
+    "@types/mockjs": "^1.0.10",
     "@types/node": "^20.11.5",
+    "@types/nprogress": "^0.2.3",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@unocss/vite": "^0.58.3",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "consola": "^3.2.3",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-define-config": "^2.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.20.1",
     "husky": "^8.0.3",
-    "mockjs": "^1.1.0",
     "prettier": "^3.2.4",
     "rollup-plugin-visualizer": "^5.12.0",
+    "unplugin-auto-import": "^0.17.3",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.11",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-mock": "^3.0.1",
     "vite-plugin-progress": "^0.0.7",
-    "vite-plugin-vue-devtools": "^7.0.11"
+    "vite-plugin-style-import": "^2.0.0",
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vite-plugin-vue-devtools": "^7.0.11",
+    "vue-tsc": "^1.8.27"
+  },
+  "author": {
+    "name": "yzy",
+    "email": "1534414811@qq.com",
+    "url": "https://github.com/sunnshare/vue3-admin.git"
+  },
+  "license": "MIT",
+  "repository": {
+    "url": "https://github.com/sunnshare/vue3-admin.git"
   }
 }
