--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "npm run typecheck && vite build",
     "preview": "vite preview",
+    "typecheck": "vue-tsc --noEmit --skipLibCheck",
     "lint": "eslint \"{src,mock,build}/**/*.{vue,ts,tsx}\" --fix",
     "prepare": "husky install",
     "preinstall": "npx only-allow pnpm"
@@ -19,7 +20,6 @@
     "element-plus": "^2.5.2",
     "mockjs": "^1.1.0",
     "nprogress": "^0.2.0",
-    "path-to-regexp": "^6.2.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-i18n": "^9.9.0",
@@ -32,9 +32,13 @@
     "@types/node": "^20.11.5",
     "@types/nprogress": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
+    "@unocss/preset-uno": "^0.58.3",
+    "@unocss/transformer-directives": "^0.58.3",
     "@unocss/vite": "^0.58.3",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "consola": "^3.2.3",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
@@ -42,13 +46,17 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-vue": "^9.20.1",
     "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
     "prettier": "^3.2.4",
     "rollup-plugin-visualizer": "^5.12.0",
+    "sass": "^1.70.0",
+    "typescript": "^5.3.3",
     "unplugin-auto-import": "^0.17.3",
+    "unplugin-icons": "^0.18.2",
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.0.11",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-mock": "^3.0.1",
+    "vite-plugin-mock": "2.9.6",
     "vite-plugin-progress": "^0.0.7",
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-svg-icons": "^2.0.1",
